--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express": "~4.14.0",
     "express-session": "^1.15.5",
     "jade": "~1.11.0",
-    "mongoose": "^4.4.11",
-    "mongoose-paginate": "^5.0.3",
+    "mongoose": "4.4.11",
+    "mongoose-paginate": "5.0.3",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "passport": "^0.2.1",
