--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "4.4.11",
     "mongoose-paginate": "5.0.3",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
