--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.1.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.2",
     "connect-flash": "^0.1.1",
