--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.5",
